--- a/DynamicBoard.Application/Components/App.razor
+++ b/DynamicBoard.Application/Components/App.razor
@@ -50,6 +50,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <script src="js/DynamicBoard.js"></script>
+    <script src="js/site.js"></script>
 </body> 
 
 </html>
@@ -64,6 +65,7 @@
         if (firstRender)
         {
             await JSRuntime.InvokeVoidAsync("loadScript", "js/dynamicboard.js");
+            await JSRuntime.InvokeVoidAsync("loadScript", "js/site.js");
         }
     }
 }
